--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>gisim</name>
     <description>Gisim project</description>
+    <!--添加打war包-->
+    <packaging>war</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -80,10 +82,23 @@
             <artifactId>gson</artifactId>
         </dependency>
 
+        <!--war包-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
     </dependencies>
 
     <build>
+        <finalName>gisim</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
