--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>gisim</name>
     <description>Gisim project</description>
     <!--添加打war包-->
-    <packaging>war</packaging>
+<!--    <packaging>war</packaging>-->
 
     <properties>
         <java.version>1.8</java.version>
@@ -83,11 +83,11 @@
         </dependency>
 
         <!--war包-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-tomcat</artifactId>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>javax.servlet</groupId>
